# MapPin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.config.json  capacitor.config.ts  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  test-all.bat  test-all.sh  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: pr-check.yml  release.yml
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  rtklib_jni.c
docs/: CONFIGURATION.md  DEVELOPMENT_GUIDE.md
public/: app.config.json  manifest.json  sw.js
src/: App.css  App.tsx  Root.tsx  index.css  main.tsx  version.ts
src/components/: AppLoader.css  AppLoader.tsx  ErrorBoundary.tsx  ErrorTrigger.tsx  Icon.tsx  IconShowcase.tsx  NetworkStatus.tsx
src/config/: appConfig.ts  constants.ts  mapTileSources.ts
src/db/: schema.ts
src/hooks/: useAsyncOperation.test.ts  useAsyncOperation.ts  useCompass.test.ts  useCompass.ts  useDataLoader.test.ts  useDataLoader.ts  useDeleteAnimation.ts  useDrawerManager.test.ts  useDrawerManager.ts  useFileNameValidation.test.ts  useFileNameValidation.ts  useFileSwitch.test.ts  useFileSwitch.ts  useLocationTracking.test.ts  useLocationTracking.ts  useNextPointNumber.test.ts  useNextPointNumber.ts  usePointDelete.test.ts  usePointDelete.ts  usePointRename.test.ts  usePointRename.ts  useScrollToElement.ts  useTitleAnimation.test.ts  useTitleAnimation.ts
src/plugins/: logCollector.ts  logCollector.web.ts  rtcmAnalyzer.ts  rtcmAnalyzer.web.ts
src/services/: anomalyDetectionService.ts  coordinateConverter.test.ts  coordinateConverter.ts  dataService.recycleBin.test.ts  dataService.ts  errorHandler.test.ts  errorHandler.ts  exportService.test.ts  exportService.ts  (+5 more)
tools/: generate_test_data.py  obs2rinex.py
(+111 files in other folders)
